fix the whitespace

--- a/index.css
+++ b/index.css
@@ -230,8 +230,7 @@ main {
   color: #fff;
 }
 
-.container5, 
-.third-para {
+.container5 {
   margin-top: 20px;
   margin-left: 2px;
 }
